fixed pre-wrapping bug

--- a/strapp/strapp.css
+++ b/strapp/strapp.css
@@ -32,6 +32,7 @@
 #textOutput {
 	margin-top: 15px;
 	font-family: 'Share Tech Mono', monospace;
+    white-space: pre-wrap;
 }
 
 #throbber {
